care/force-app/main/default/objects/Candidate_Profile__c/Candidate_Profile__c.object-meta.xml
<CustomObject>
    <label>Candidate Profile</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Candidate Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>