care/force-app/main/default/objects/Candidate_Profile__c/fields/Activities_In_Toddler_Infant_Room__c.field-meta.xml
<CustomField>
    <fullName>Activities_In_Toddler_Infant_Room__c</fullName>
    <inlineHelpText>Please provide examples of activities available in the toddler/infant room</inlineHelpText>
    <label>Activities In Toddler/Infant Room?</label>
    <type>TextArea</type>
</CustomField>