care/force-app/main/default/objects/Candidate_Profile__c/fields/Additional_Candidate_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Candidate_Notes__c</fullName>
    <description>Notes regarding provider phone call – tone, special notes, feeling/sense from phone conversation</description>
    <inlineHelpText>Notes regarding provider phone call – tone, special notes, feeling/sense from phone conversation</inlineHelpText>
    <label>Additional Candidate Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>