care/force-app/main/default/objects/Candidate_Profile__c/fields/Age_appropriate_activities__c.field-meta.xml
<CustomField>
    <fullName>Age_appropriate_activities__c</fullName>
    <inlineHelpText>Examples of age appropriate activities you would do on a daily basis?</inlineHelpText>
    <label>Age appropriate activities</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>