care/force-app/main/default/objects/Candidate_Profile__c/fields/Alter__c.field-meta.xml
<CustomField>
    <fullName>Alter__c</fullName>
    <label>Alter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>