care/force-app/main/default/objects/Candidate_Profile__c/fields/Arbeitserlaubnis_ist_vorhanden__c.field-meta.xml
<CustomField>
    <fullName>Arbeitserlaubnis_ist_vorhanden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arbeitserlaubnis ist vorhanden?</label>
    <type>Checkbox</type>
</CustomField>