care/force-app/main/default/objects/Candidate_Profile__c/fields/Are_There_Toys_On_Low_Shelves__c.field-meta.xml
<CustomField>
    <fullName>Are_There_Toys_On_Low_Shelves__c</fullName>
    <inlineHelpText>Are there toys within reach of infants, toddlers, and preschoolers?</inlineHelpText>
    <label>Are There Toys On Low Shelves?</label>
    <type>TextArea</type>
</CustomField>