care/force-app/main/default/objects/Candidate_Profile__c/fields/Are_you_comfortable_with_pets__c.field-meta.xml
<CustomField>
    <fullName>Are_you_comfortable_with_pets__c</fullName>
    <label>Are you comfortable with pets?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>