care/force-app/main/default/objects/Candidate_Profile__c/fields/Are_you_legal_to_work_in_the_US__c.field-meta.xml
<CustomField>
    <fullName>Are_you_legal_to_work_in_the_US__c</fullName>
    <label>Are you legal to work in the US?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>