care/force-app/main/default/objects/Candidate_Profile__c/fields/Are_you_vaccinated__c.field-meta.xml
<CustomField>
    <fullName>Are_you_vaccinated__c</fullName>
    <label>Are you vaccinated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer Not to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>