care/force-app/main/default/objects/Candidate_Profile__c/fields/Assistance_with_IADLS__c.field-meta.xml
<CustomField>
    <fullName>Assistance_with_IADLS__c</fullName>
    <label>Assistance with IADLS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Meal Preparation</fullName>
            </value>
            <value>
                <fullName>Medication Reminders</fullName>
            </value>
            <value>
                <fullName>Laundry</fullName>
            </value>
            <value>
                <fullName>Housecleaning</fullName>
            </value>
            <value>
                <fullName>Bill Paying</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Yard Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>