care/force-app/main/default/objects/Candidate_Profile__c/fields/Ausweis__c.field-meta.xml
<CustomField>
    <fullName>Ausweis__c</fullName>
    <label>Ausweis</label>
    <type>Date</type>
</CustomField>