care/force-app/main/default/objects/Candidate_Profile__c/fields/Availability_to_Interview_Start__c.field-meta.xml
<CustomField>
    <fullName>Availability_to_Interview_Start__c</fullName>
    <inlineHelpText>Availability to interview and start this position?</inlineHelpText>
    <label>Availability to Interview/Start</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>