care/force-app/main/default/objects/Candidate_Profile__c/fields/Background_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Completed__c</fullName>
    <label>BGC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preliminary</fullName>
            </value>
            <value>
                <fullName>Criminal FAIL</fullName>
            </value>
            <value>
                <fullName>Criminal+MVR FAIL</fullName>
            </value>
            <value>
                <fullName>Premier FAIL</fullName>
            </value>
            <value>
                <fullName>Family Decline</fullName>
            </value>
            <value>
                <fullName>Criminal Pass</fullName>
            </value>
            <value>
                <fullName>Criminal+MVR Pass</fullName>
            </value>
            <value>
                <fullName>Premier Pass</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>