care/force-app/main/default/objects/Candidate_Profile__c/fields/Background_Check_Notes__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Notes__c</fullName>
    <label>Background Check Notes</label>
    <type>TextArea</type>
</CustomField>