care/force-app/main/default/objects/Candidate_Profile__c/fields/Bezahlung__c.field-meta.xml
<CustomField>
    <fullName>Bezahlung__c</fullName>
    <label>Bezahlung:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minijob</fullName>
            </value>
            <value>
                <fullName>Rechnung</fullName>
            </value>
            <value>
                <fullName>Sozialversicherungspflichtige Anstellung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>