care/force-app/main/default/objects/Candidate_Profile__c/fields/Blacklisted__c.field-meta.xml
<CustomField>
    <fullName>Blacklisted__c</fullName>
    <formula>Provider_Account__r.Blacklisted__pc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blocklisted</label>
    <type>Checkbox</type>
</CustomField>