care/force-app/main/default/objects/Candidate_Profile__c/fields/Candidate_Hired__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Hired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate Hired</label>
    <type>Checkbox</type>
</CustomField>