care/force-app/main/default/objects/Candidate_Profile__c/fields/Candidate_Sent__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent</label>
    <type>Checkbox</type>
</CustomField>