care/force-app/main/default/objects/Candidate_Profile__c/fields/Car_make_model_year_airbags_child_locks__c.field-meta.xml
<CustomField>
    <fullName>Car_make_model_year_airbags_child_locks__c</fullName>
    <inlineHelpText>Can you please tell me the make, model, and year of your car? Does it have airbags and child-locks?</inlineHelpText>
    <label>Car make/model/year/airbags/child-locks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>