care/force-app/main/default/objects/Candidate_Profile__c/fields/Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Center_Name__c</fullName>
    <description>Center Name</description>
    <label>Center Name</label>
    <type>TextArea</type>
</CustomField>