care/force-app/main/default/objects/Candidate_Profile__c/fields/Center_Summary__c.field-meta.xml
<CustomField>
    <fullName>Center_Summary__c</fullName>
    <description>Center Summary used to caption additional note for center.</description>
    <label>Center Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>