care/force-app/main/default/objects/Candidate_Profile__c/fields/Certifications_relevant_to_the_position__c.field-meta.xml
<CustomField>
    <fullName>Certifications_relevant_to_the_position__c</fullName>
    <description>Do you have any certifications relevant to the position? This field is used by AS users.</description>
    <label>Certifications relevant to the position?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>