care/force-app/main/default/objects/Candidate_Profile__c/fields/Commercial_residential_experience__c.field-meta.xml
<CustomField>
    <fullName>Commercial_residential_experience__c</fullName>
    <description>Sforce 1777</description>
    <label>Commercial/residential experience?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>