care/force-app/main/default/objects/Candidate_Profile__c/fields/Current_City__c.field-meta.xml
<CustomField>
    <fullName>Current_City__c</fullName>
    <label>Current City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>