care/force-app/main/default/objects/Candidate_Profile__c/fields/Current_profession_besides_housekeeping__c.field-meta.xml
<CustomField>
    <fullName>Current_profession_besides_housekeeping__c</fullName>
    <description>Sforce 1777, Label updated on 10/17/22 - Used to capture the info if housekeeper is friendly with Pets.</description>
    <label>Are you comfortable with pets ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>