care/force-app/main/default/objects/Candidate_Profile__c/fields/Currently_Employed__c.field-meta.xml
<CustomField>
    <fullName>Currently_Employed__c</fullName>
    <inlineHelpText>Are you currently employed? Reason for leaving?</inlineHelpText>
    <label>Currently Employed?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>