care/force-app/main/default/objects/Candidate_Profile__c/fields/Daily_Age_Appropriate_Activities__c.field-meta.xml
<CustomField>
    <fullName>Daily_Age_Appropriate_Activities__c</fullName>
    <inlineHelpText>Please provide examples of daily age appropriate activities at the center</inlineHelpText>
    <label>Daily Age Appropriate Activities?</label>
    <type>TextArea</type>
</CustomField>