care/force-app/main/default/objects/Candidate_Profile__c/fields/Days_times_available__c.field-meta.xml
<CustomField>
    <fullName>Days_times_available__c</fullName>
    <description>Sforce 1777</description>
    <label>Days/times available?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>