care/force-app/main/default/objects/Candidate_Profile__c/fields/Declined__c.field-meta.xml
<CustomField>
    <fullName>Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Candidate Profiles, candidate status, for assisted search cases</description>
    <label>Declined</label>
    <type>Checkbox</type>
</CustomField>