care/force-app/main/default/objects/Candidate_Profile__c/fields/Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declined_Reason__c</fullName>
    <inlineHelpText>Why internally declined or family declined</inlineHelpText>
    <label>Declined Reason</label>
    <type>TextArea</type>
</CustomField>