care/force-app/main/default/objects/Candidate_Profile__c/fields/Describe_style_of_service__c.field-meta.xml
<CustomField>
    <fullName>Describe_style_of_service__c</fullName>
    <description>Sforce 1777</description>
    <label>Describe style of service?</label>
    <type>TextArea</type>
</CustomField>