care/force-app/main/default/objects/Candidate_Profile__c/fields/Desired_Rate__c.field-meta.xml
<CustomField>
    <fullName>Desired_Rate__c</fullName>
    <description>After describing job details, “For this type of position, what is the pay rate you are looking for?</description>
    <inlineHelpText>After describing job details, “For this type of position, what is the pay rate you are looking for?</inlineHelpText>
    <label>Pay Rate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>