care/force-app/main/default/objects/Candidate_Profile__c/fields/Detailed_Caregiving_Experience__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Caregiving_Experience__c</fullName>
    <inlineHelpText>(Description: “i.e. # of years with each family, ages of care recipients, daily responsibilities, reason for leaving position”)</inlineHelpText>
    <label>Detailed Caregiving Experience</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>