care/force-app/main/default/objects/Candidate_Profile__c/fields/Diagnoses_you_are_familiar__c.field-meta.xml
<CustomField>
    <fullName>Diagnoses_you_are_familiar__c</fullName>
    <description>What Diagnoses you are familiar with ? field used by AS</description>
    <inlineHelpText>What Diagnoses you are familiar with ?</inlineHelpText>
    <label>Diagnoses you are familiar</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>