care/force-app/main/default/objects/Candidate_Profile__c/fields/Disciplinary_situations__c.field-meta.xml
<CustomField>
    <fullName>Disciplinary_situations__c</fullName>
    <inlineHelpText>How do you handle disciplinary situations? (Based on the ages of the care recipients)</inlineHelpText>
    <label>Disciplinary situations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>