care/force-app/main/default/objects/Candidate_Profile__c/fields/Do_you_have_a_reliable_vehicle__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_reliable_vehicle__c</fullName>
    <label>Do you have a reliable vehicle?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>