care/force-app/main/default/objects/Candidate_Profile__c/fields/Do_You_Have_Pet_s__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Have_Pet_s__c</fullName>
    <description>field used by Expert Assist Users.</description>
    <inlineHelpText>Do you have any pet(s) ? if Yes, please add the details.</inlineHelpText>
    <label>Do You Have Pet(s) ?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>