care/force-app/main/default/objects/Candidate_Profile__c/fields/Driving_Criminal_background__c.field-meta.xml
<CustomField>
    <fullName>Driving_Criminal_background__c</fullName>
    <inlineHelpText>Please describe your driving record and criminal background. (Note: enhanced BGC’s will be run on final candidates)</inlineHelpText>
    <label>Driving/Criminal background</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>