care/force-app/main/default/objects/Candidate_Profile__c/fields/Emergency_situations__c.field-meta.xml
<CustomField>
    <fullName>Emergency_situations__c</fullName>
    <inlineHelpText>Describe your protocol for emergency situations (minor cuts, severe injuries, non-medical, etc.)</inlineHelpText>
    <label>Emergency situations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>