care/force-app/main/default/objects/Candidate_Profile__c/fields/Enjoy_most_about_housekeeping__c.field-meta.xml
<CustomField>
    <fullName>Enjoy_most_about_housekeeping__c</fullName>
    <description>Sforce 1777</description>
    <label>Enjoy most about housekeeping?</label>
    <type>TextArea</type>
</CustomField>