care/force-app/main/default/objects/Candidate_Profile__c/fields/Entfernung_ist_nicht_zu_weit__c.field-meta.xml
<CustomField>
    <fullName>Entfernung_ist_nicht_zu_weit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entfernung ist nicht zu weit?</label>
    <type>Checkbox</type>
</CustomField>