care/force-app/main/default/objects/Candidate_Profile__c/fields/Examples_Of_Nutritious_Snack_Meal__c.field-meta.xml
<CustomField>
    <fullName>Examples_Of_Nutritious_Snack_Meal__c</fullName>
    <label>Capacity/Ratio in Program</label>
    <type>TextArea</type>
</CustomField>