care/force-app/main/default/objects/Candidate_Profile__c/fields/Experience_in_a_Classroom_and_private__c.field-meta.xml
<CustomField>
    <fullName>Experience_in_a_Classroom_and_private__c</fullName>
    <description>Do you have experience caring for individuals needing accommodations a classroom environment and in private homes ?, field used by AS Users</description>
    <inlineHelpText>Do you have experience caring for individuals needing accommodations a classroom environment and in private homes ?</inlineHelpText>
    <label>Experience in a classroom/private home?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>