care/force-app/main/default/objects/Candidate_Profile__c/fields/Explain_Proper_Safety_Gate_Use__c.field-meta.xml
<CustomField>
    <fullName>Explain_Proper_Safety_Gate_Use__c</fullName>
    <label>Curriculum/Special Programming Offered ?</label>
    <type>TextArea</type>
</CustomField>