care/force-app/main/default/objects/Candidate_Profile__c/fields/F_hrungszeugnis__c.field-meta.xml
<CustomField>
    <fullName>F_hrungszeugnis__c</fullName>
    <label>Führungszeugnis</label>
    <type>Date</type>
</CustomField>