care/force-app/main/default/objects/Candidate_Profile__c/fields/Facilitate_Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>Facilitate_Special_Needs__c</fullName>
    <inlineHelpText>Please explain how you facilitate mainstreaming children who need accommodations</inlineHelpText>
    <label>Facilitate Need Accommodations</label>
    <type>TextArea</type>
</CustomField>