care/force-app/main/default/objects/Candidate_Profile__c/fields/Family_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Family_Enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Family Enrolled, field used by Expert Assistance users.</description>
    <inlineHelpText>Family Enrolled</inlineHelpText>
    <label>Family Enrolled</label>
    <type>Checkbox</type>
</CustomField>