care/force-app/main/default/objects/Candidate_Profile__c/fields/Family_In_Center_Site_Visit_Process__c.field-meta.xml
<CustomField>
    <fullName>Family_In_Center_Site_Visit_Process__c</fullName>
    <label>Contact Person</label>
    <type>TextArea</type>
</CustomField>