care/force-app/main/default/objects/Candidate_Profile__c/fields/Family_Status__c.field-meta.xml
<CustomField>
    <fullName>Family_Status__c</fullName>
    <label>Family Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Under Consideration</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>