care/force-app/main/default/objects/Candidate_Profile__c/fields/Family_to_know_about_you__c.field-meta.xml
<CustomField>
    <fullName>Family_to_know_about_you__c</fullName>
    <inlineHelpText>What would you want this family to know about you? (Description: “About your personality, work ethic, etc.”)</inlineHelpText>
    <label>Family to know about you?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>