care/force-app/main/default/objects/Candidate_Profile__c/fields/First_Aid_CPR_Training__c.field-meta.xml
<CustomField>
    <fullName>First_Aid_CPR_Training__c</fullName>
    <inlineHelpText>Are you First Aid and CPR trained or willing to be trained?</inlineHelpText>
    <label>First Aid/CPR Training</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Aid Trained</fullName>
            </value>
            <value>
                <fullName>First Aid Certified</fullName>
            </value>
            <value>
                <fullName>CPR Trained</fullName>
            </value>
            <value>
                <fullName>CPR Certified</fullName>
            </value>
            <value>
                <fullName>Infant First Aid Trained</fullName>
            </value>
            <value>
                <fullName>Infant First Aid Certified</fullName>
            </value>
            <value>
                <fullName>Willing to be trained</fullName>
            </value>
            <value>
                <fullName>Erste Hilfe</fullName>
            </value>
            <value>
                <fullName>Erste Hilfe am Kind</fullName>
            </value>
            <value>
                <fullName>Tagespflege Qualifikation</fullName>
            </value>
            <value>
                <fullName>Babysittediplom</fullName>
            </value>
            <value>
                <fullName>JuLeiCa</fullName>
            </value>
            <value>
                <fullName>Andere Zeugnisse</fullName>
            </value>
            <value>
                <fullName>Pass/Personalausweis</fullName>
            </value>
            <value>
                <fullName>Lebenslauf</fullName>
            </value>
            <value>
                <fullName>Führungszeugnis</fullName>
            </value>
            <value>
                <fullName>Schriftliche Bestätigung über die Beantragung eines polizeilichen Führungszeugnises</fullName>
            </value>
            <value>
                <fullName>Abgeschlossene pädagogisch Ausbildung</fullName>
            </value>
            <value>
                <fullName>Abgeschlossenes pädagogisches Studium</fullName>
            </value>
            <value>
                <fullName>Laufende pädagogische Ausbildung</fullName>
            </value>
            <value>
                <fullName>Laufendes pädagogisches Studium</fullName>
            </value>
            <value>
                <fullName>Sonstige laufende Ausbildung/Studium</fullName>
            </value>
            <value>
                <fullName>Sonstige abgeschlossene Ausbildung</fullName>
            </value>
            <value>
                <fullName>Rettungsschwimmer</fullName>
            </value>
            <value>
                <fullName>Referenzen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>