care/force-app/main/default/objects/Candidate_Profile__c/fields/Google_Rating_BBB_Rating__c.field-meta.xml
<CustomField>
    <fullName>Google_Rating_BBB_Rating__c</fullName>
    <description>Google Rating / BBB Rating</description>
    <inlineHelpText>Google Rating/BBB Rating if known</inlineHelpText>
    <label>Google Rating/BBB Rating</label>
    <length>100</length>
    <type>Text</type>
</CustomField>