care/force-app/main/default/objects/Candidate_Profile__c/fields/Green_pet_friendly_cleaning_experience__c.field-meta.xml
<CustomField>
    <fullName>Green_pet_friendly_cleaning_experience__c</fullName>
    <description>Sforce 1777</description>
    <label>Green/pet friendly cleaning experience?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>