care/force-app/main/default/objects/Candidate_Profile__c/fields/Growing_from_different_stages__c.field-meta.xml
<CustomField>
    <fullName>Growing_from_different_stages__c</fullName>
    <inlineHelpText>As children you are caring for grow from different stages, how do you handle these transitions?</inlineHelpText>
    <label>Growing from different stages</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>