care/force-app/main/default/objects/Candidate_Profile__c/fields/Housekeeping_experience_yrs_capacity__c.field-meta.xml
<CustomField>
    <fullName>Housekeeping_experience_yrs_capacity__c</fullName>
    <description>Sforce 1777</description>
    <label>Housekeeping experience (yrs/capacity)?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>