care/force-app/main/default/objects/Candidate_Profile__c/fields/How_Staff_Respects_Cultural_Difference__c.field-meta.xml
<CustomField>
    <fullName>How_Staff_Respects_Cultural_Difference__c</fullName>
    <inlineHelpText>Please provide examples of how staff respects cultural differences</inlineHelpText>
    <label>How Staff Respects Cultural Difference?</label>
    <type>TextArea</type>
</CustomField>