care/force-app/main/default/objects/Candidate_Profile__c/fields/Info_For_Prospective_Families__c.field-meta.xml
<CustomField>
    <fullName>Info_For_Prospective_Families__c</fullName>
    <description>Field used by Expert Assistance Users.</description>
    <label>Hours/Days of Operation</label>
    <type>TextArea</type>
</CustomField>