care/force-app/main/default/objects/Candidate_Profile__c/fields/Initial_Decline__c.field-meta.xml
<CustomField>
    <fullName>Initial_Decline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Decline</label>
    <type>Checkbox</type>
</CustomField>