care/force-app/main/default/objects/Candidate_Profile__c/fields/Internal_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Status__c</fullName>
    <label>Internal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bad Number/Mailbox Full</fullName>
            </value>
            <value>
                <fullName>hired</fullName>
            </value>
            <value>
                <fullName>Initial Decline</fullName>
            </value>
            <value>
                <fullName>Interviewed</fullName>
            </value>
            <value>
                <fullName>Pending Call Back</fullName>
            </value>
            <value>
                <fullName>Pending Verification</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
            <value>
                <fullName>send to client</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>verified</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>