care/force-app/main/default/objects/Candidate_Profile__c/fields/Is_Daily_Report_Provided_To_Families__c.field-meta.xml
<CustomField>
    <fullName>Is_Daily_Report_Provided_To_Families__c</fullName>
    <inlineHelpText>Is a daily report provided to families on feedings, naps, diaper changes/daily activities?</inlineHelpText>
    <label>Is Daily Report Provided To Families?</label>
    <type>TextArea</type>
</CustomField>