care/force-app/main/default/objects/Candidate_Profile__c/fields/Is_offer_rate_of_acceptable__c.field-meta.xml
<CustomField>
    <fullName>Is_offer_rate_of_acceptable__c</fullName>
    <description>Sforce 1777</description>
    <label>Is offer rate of___acceptable?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>