care/force-app/main/default/objects/Candidate_Profile__c/fields/Is_Your_Center_Nut_Free__c.field-meta.xml
<CustomField>
    <fullName>Is_Your_Center_Nut_Free__c</fullName>
    <label>Is Your Center Nut-Free?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>