care/force-app/main/default/objects/Candidate_Profile__c/fields/Key_components_of_housekeeping__c.field-meta.xml
<CustomField>
    <fullName>Key_components_of_housekeeping__c</fullName>
    <description>Sforce 1777, Updated on 10/17/22 - Used to capture the references from current clients</description>
    <label>References From Current Clients ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>