care/force-app/main/default/objects/Candidate_Profile__c/fields/KiBe_richtigen_Altersgruppe__c.field-meta.xml
<CustomField>
    <fullName>KiBe_richtigen_Altersgruppe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KiBe: richtigen Altersgruppe?</label>
    <type>Checkbox</type>
</CustomField>