care/force-app/main/default/objects/Candidate_Profile__c/fields/List_of_events__c.field-meta.xml
<CustomField>
    <fullName>List_of_events__c</fullName>
    <label>List of events</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>