care/force-app/main/default/objects/Candidate_Profile__c/fields/Looking_for_Long_Term_Short_Term_Work__c.field-meta.xml
<CustomField>
    <fullName>Looking_for_Long_Term_Short_Term_Work__c</fullName>
    <description>Are you looking for longterm or short term work?  field used by AS users.</description>
    <label>Looking for Long Term/Short Term Work ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Long Term</fullName>
            </value>
            <value>
                <fullName>Short Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>