care/force-app/main/default/objects/Candidate_Profile__c/fields/Minijob_Arbeitgeber_stimmt_zu__c.field-meta.xml
<CustomField>
    <fullName>Minijob_Arbeitgeber_stimmt_zu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minijob: Arbeitgeber stimmt zu?</label>
    <type>Checkbox</type>
</CustomField>