care/force-app/main/default/objects/Candidate_Profile__c/fields/Minijob_nicht_ber_450__c.field-meta.xml
<CustomField>
    <fullName>Minijob_nicht_ber_450__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minijob: nicht über 450€?</label>
    <type>Checkbox</type>
</CustomField>